src/objects/Xero_Setting__c.object
<CustomObject>
    <description>Settings for Xero API integration.</description>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <inlineHelpText>Not explicitly required for the Private Application authentication,</inlineHelpText>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <defaultValue>&quot;https://api.xero.com/api.xro/2.0/&quot;</defaultValue>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Xero Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>X-{0}</displayFormat>
        <label>Xero Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xero Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>